[project]
name = "MPHY0050-cw2-env"
version = "0.1.0"
description = "Env for MPHY0050 coursework 2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "tqdm",
  "torch",
  "torchvision",
  "pandas>=3.0.1",
  "scikit-learn>=1.8.0",
  "opencv-python>=4.13.0.92",
  "scipy>=1.17.1",
  "statsmodels>=0.14.6",
  "seaborn>=0.13.2",
]
